Refactor the mess:)